Fix button spacing

--- a/ods-helphub/src/assets/less/components.less
+++ b/ods-helphub/src/assets/less/components.less
@@ -3,8 +3,8 @@
     border: none;
     background-color: transparent;
     color: @identity-300;
-    padding: @spacing-50*2;
-    border-radius: 4px;
+    padding: @spacing-100;
+    border-radius: 6px;
     cursor: pointer;
     font-family: @font-family;
 }
